src/ruby.d


VALUE rb_int2inum (c_long);
VALUE rb_uint2inum (VALUE);
VALUE rb_ll2inum (long);
VALUE rb_ull2inum (ulong);
void rb_out_of_int (c_long num);
int rb_long2int_inline (c_long n);
int rb_type (VALUE obj);
void rb_check_type (VALUE, int);
VALUE rb_str_to_str (VALUE);
VALUE rb_string_value (VALUE*);
char* rb_string_value_ptr (VALUE*);
char* rb_string_value_cstr (VALUE*);
void rb_check_safe_obj (VALUE);
void rb_check_safe_str (VALUE);
VALUE rb_str_export (VALUE);
VALUE rb_str_export_locale (VALUE);
VALUE rb_get_path (VALUE);
VALUE rb_get_path_no_checksafe (VALUE);
void rb_secure (int);
int rb_safe_level ();
void rb_set_safe_level (int);
void rb_set_safe_level_force (int);
void rb_secure_update (VALUE);
void rb_insecure_operation ();
VALUE rb_errinfo ();
void rb_set_errinfo (VALUE);
c_long rb_num2long (VALUE);
VALUE rb_num2ulong (VALUE);
c_long rb_num2long_inline (VALUE x);
c_ulong rb_num2ulong_inline (VALUE x);
c_long rb_num2int (VALUE);
c_long rb_fix2int (VALUE);
int rb_num2int_inline (VALUE x);
c_ulong rb_num2uint (VALUE);
c_ulong rb_fix2uint (VALUE);
short rb_num2short (VALUE);
ushort rb_num2ushort (VALUE);
short rb_fix2short (VALUE);
ushort rb_fix2ushort (VALUE);
short rb_num2short_inline (VALUE x);
long rb_num2ll (VALUE);
ulong rb_num2ull (VALUE);
long rb_num2ll_inline (VALUE x);
double rb_num2dbl (VALUE);
VALUE rb_uint2big (VALUE);
VALUE rb_int2big (c_long);
VALUE rb_newobj ();
VALUE rb_newobj_of (VALUE, VALUE);
VALUE rb_obj_setup (VALUE obj, VALUE klass, VALUE type);
VALUE rb_obj_hide (VALUE obj);
VALUE rb_obj_reveal (VALUE obj, VALUE klass);
double rb_float_value (VALUE);
VALUE rb_float_new (double);
VALUE rb_float_new_in_heap (double);
VALUE rb_data_object_alloc (VALUE, void*, RUBY_DATA_FUNC, RUBY_DATA_FUNC);
VALUE rb_data_typed_object_alloc (VALUE klass, void* datap, const(rb_data_type_t)*);
int rb_typeddata_inherited_p (const(rb_data_type_t)* child, const(rb_data_type_t)* parent);
int rb_typeddata_is_kind_of (VALUE, const(rb_data_type_t)*);
void* rb_check_typeddata (VALUE, const(rb_data_type_t)*);
void rb_gc_writebarrier (VALUE a, VALUE b);
void rb_gc_writebarrier_unprotect_promoted (VALUE obj);
VALUE rb_obj_wb_unprotect (VALUE x, const(char)* filename, int line);
VALUE rb_obj_written (VALUE a, VALUE oldv, VALUE b, const(char)* filename, int line);
VALUE rb_obj_write (VALUE a, VALUE* slot, VALUE b, const(char)* filename, int line);
VALUE rb_long2num_inline (c_long v);
VALUE rb_ulong2num_inline (c_ulong v);
char rb_num2char_inline (VALUE x);
void* rb_alloc_tmp_buffer (VALUE* store, c_long len);
void rb_free_tmp_buffer (VALUE* store);
void rb_obj_infect (VALUE, VALUE);
void rb_glob (const(char)*, void function (const(char)*, VALUE, void*), VALUE);
int ruby_glob (const(char)*, int, int function (const(char)*, VALUE, void*), VALUE);
int ruby_brace_glob (const(char)*, int, int function (const(char)*, VALUE, void*), VALUE);
VALUE rb_define_class (const(char)*, VALUE);
VALUE rb_define_module (const(char)*);
VALUE rb_define_class_under (VALUE, const(char)*, VALUE);
VALUE rb_define_module_under (VALUE, const(char)*);
void rb_include_module (VALUE, VALUE);
void rb_extend_object (VALUE, VALUE);
void rb_prepend_module (VALUE, VALUE);
VALUE rb_gvar_undef_getter (ID id, void* data, rb_global_variable* gvar);
void rb_gvar_undef_setter (VALUE val, ID id, void* data, rb_global_variable* gvar);
void rb_gvar_undef_marker (VALUE* var);
VALUE rb_gvar_val_getter (ID id, void* data, rb_global_variable* gvar);
void rb_gvar_val_setter (VALUE val, ID id, void* data, rb_global_variable* gvar);
void rb_gvar_val_marker (VALUE* var);
VALUE rb_gvar_var_getter (ID id, void* data, rb_global_variable* gvar);
void rb_gvar_var_setter (VALUE val, ID id, void* data, rb_global_variable* gvar);
void rb_gvar_var_marker (VALUE* var);
void rb_gvar_readonly_setter (VALUE val, ID id, void* data, rb_global_variable* gvar);
void rb_define_variable (const(char)*, VALUE*);
void rb_define_virtual_variable (const(char)*, <unimplemented>*, <unimplemented>*);
void rb_define_hooked_variable (const(char)*, VALUE*, <unimplemented>*, <unimplemented>*);
void rb_define_readonly_variable (const(char)*, VALUE*);
void rb_define_const (VALUE, const(char)*, VALUE);
void rb_define_global_const (const(char)*, VALUE);
void rb_define_method (VALUE, const(char)*, <unimplemented>*, int);
void rb_define_module_function (VALUE, const(char)*, <unimplemented>*, int);
void rb_define_global_function (const(char)*, <unimplemented>*, int);
void rb_undef_method (VALUE, const(char)*);
void rb_define_alias (VALUE, const(char)*, const(char)*);
void rb_define_attr (VALUE, const(char)*, int, int);
void rb_global_variable (VALUE*);
void rb_gc_register_mark_object (VALUE);
void rb_gc_register_address (VALUE*);
void rb_gc_unregister_address (VALUE*);
ID rb_intern (const(char)*);
ID rb_intern2 (const(char)*, c_long);
ID rb_intern_str (VALUE str);
const(char)* rb_id2name (ID);
ID rb_check_id (VALUE*);
ID rb_to_id (VALUE);
VALUE rb_id2str (ID);
const(char)* rb_class2name (VALUE);
const(char)* rb_obj_classname (VALUE);
void rb_p (VALUE);
VALUE rb_eval_string (const(char)*);
VALUE rb_eval_string_protect (const(char)*, int*);
VALUE rb_eval_string_wrap (const(char)*, int*);
VALUE rb_funcall (VALUE, ID, int, ...);
VALUE rb_funcallv (VALUE, ID, int, const(VALUE)*);
VALUE rb_funcallv_public (VALUE, ID, int, const(VALUE)*);
VALUE rb_funcall_passing_block (VALUE, ID, int, const(VALUE)*);
VALUE rb_funcall_with_block (VALUE, ID, int, const(VALUE)*, VALUE);
int rb_scan_args (int, const(VALUE)*, const(char)*, ...);
VALUE rb_call_super (int, const(VALUE)*);
VALUE rb_gv_set (const(char)*, VALUE);
VALUE rb_gv_get (const(char)*);
VALUE rb_iv_get (VALUE, const(char)*);
VALUE rb_iv_set (VALUE, const(char)*, VALUE);
VALUE rb_equal (VALUE, VALUE);
VALUE* rb_ruby_verbose_ptr ();
VALUE* rb_ruby_debug_ptr ();
void rb_raise (VALUE, const(char)*, ...);
void rb_fatal (const(char)*, ...);
void rb_bug (const(char)*, ...);
void rb_bug_errno (const(char)*, int);
void rb_sys_fail (const(char)*);
void rb_sys_fail_str (VALUE);
void rb_mod_sys_fail (VALUE, const(char)*);
void rb_mod_sys_fail_str (VALUE, VALUE);
void rb_readwrite_sys_fail (int, const(char)*);
void rb_iter_break ();
void rb_iter_break_value (VALUE);
void rb_exit (int);
void rb_notimplement ();
VALUE rb_syserr_new (int, const(char)*);
VALUE rb_syserr_new_str (int n, VALUE arg);
void rb_syserr_fail (int, const(char)*);
void rb_syserr_fail_str (int, VALUE);
void rb_mod_syserr_fail (VALUE, int, const(char)*);
void rb_mod_syserr_fail_str (VALUE, int, VALUE);
void rb_warning (const(char)*, ...);
void rb_compile_warning (const(char)*, int, const(char)*, ...);
void rb_sys_warning (const(char)*, ...);
void rb_warn (const(char)*, ...);
void rb_compile_warn (const(char)*, int, const(char)*, ...);
VALUE rb_each (VALUE);
VALUE rb_yield (VALUE);
VALUE rb_yield_values (int n, ...);
VALUE rb_yield_values2 (int n, const(VALUE)* argv);
VALUE rb_yield_splat (VALUE);
VALUE rb_yield_block (VALUE, VALUE, int, const(VALUE)*, VALUE);
int rb_block_given_p ();
void rb_need_block ();
VALUE rb_iterate (VALUE function (VALUE), VALUE, <unimplemented>*, VALUE);
VALUE rb_block_call (VALUE, ID, int, const(VALUE)*, rb_block_call_func_t, VALUE);
VALUE rb_rescue (<unimplemented>*, VALUE, <unimplemented>*, VALUE);
VALUE rb_rescue2 (<unimplemented>*, VALUE, <unimplemented>*, VALUE, ...);
VALUE rb_ensure (<unimplemented>*, VALUE, <unimplemented>*, VALUE);
VALUE rb_catch (const(char)*, <unimplemented>*, VALUE);
VALUE rb_catch_obj (VALUE, <unimplemented>*, VALUE);
void rb_throw (const(char)*, VALUE);
void rb_throw_obj (VALUE, VALUE);
VALUE rb_require (const(char)*);
VALUE rb_class_of (VALUE obj);
int rb_type (VALUE obj);
int ruby_native_thread_p ();
void rb_add_event_hook (rb_event_hook_func_t func, rb_event_flag_t events, VALUE data);
int rb_remove_event_hook (rb_event_hook_func_t func);
int rb_isalnum (int c);
int rb_isalpha (int c);
int rb_isblank (int c);
int rb_iscntrl (int c);
int rb_isdigit (int c);
int rb_isgraph (int c);
int rb_islower (int c);
int rb_isprint (int c);
int rb_ispunct (int c);
int rb_isspace (int c);
int rb_isupper (int c);
int rb_isxdigit (int c);
int rb_tolower (int c);
int rb_toupper (int c);
int st_locale_insensitive_strcasecmp (const(char)* s1, const(char)* s2);
int st_locale_insensitive_strncasecmp (const(char)* s1, const(char)* s2, size_t n);
c_ulong ruby_strtoul (const(char)* str, char** endptr, int base);
int ruby_snprintf (char* str, size_t n, const(char)* fmt, ...);
int ruby_vsnprintf (char* str, size_t n, const(char)* fmt, va_list ap);
void ruby_sysinit (int* argc, char*** argv);
void ruby_init ();
void* ruby_options (int argc, char** argv);
int ruby_executable_node (void* n, int* status);
int ruby_run_node (void* n);
void ruby_show_version ();
void ruby_show_copyright ();
void ruby_init_stack (VALUE*);
int ruby_setup ();
int ruby_cleanup (int);
void ruby_finalize ();
void ruby_stop (int);
void ruby_set_stack_size (size_t);
int ruby_stack_check ();
size_t ruby_stack_length (VALUE**);
int ruby_exec_node (void* n);
void ruby_script (const(char)* name);
void ruby_set_script_name (VALUE name);
void ruby_prog_init ();
void ruby_set_argv (int, char**);
void* ruby_process_options (int, char**);
void ruby_init_loadpath ();
void ruby_incpush (const(char)*);
void ruby_sig_finalize ();